# prefextflow

./: .gitignore  README.md  pyproject.toml
src/: deploy.py  nextflow_flows.py  nextflow_w_logging.py  run_nextflow.py
