[tool.poetry]
name = "prefextflow"
version = "0.1.0"
description = "Helpers for pipeline monitoring with prefect"
authors = ["Jamie Billington <jmbillington11@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
